--- a/todo-listo-angular/src/app/app.component.html
+++ b/todo-listo-angular/src/app/app.component.html
@@ -132,7 +132,7 @@
     </form>
   </div>
   <div *ngIf="tareasMapaFlag">
-      <a href="#" (click)="volver()">Volver</a>
+      <button class="btn btn-primary" href="#" (click)="volver()">Volver</button>
       <div  style="height: 500px;"
                 leaflet 
                 [leafletOptions]="options2"
