tarea finalizada (login con tareas por sesiones)

--- a/todo-listo-angular/src/app/app.component.html
+++ b/todo-listo-angular/src/app/app.component.html
@@ -3,7 +3,7 @@
   
 
   <div *ngIf="loggedIn && !tareasMapaFlag">
-    <!--<a href="#" (click)="cerrarSesion()">Cerrar sesión</a>-->
+    <a href="#" (click)="cerrarSesion()">Cerrar sesión</a>
     <button class="btn btn-primary" href="#" (click)="tareasMapa()">Mostrar tareas en mapa</button>
     <div class="row">
       <div class="col-md-4" style="border: 1px solid black;">
